# routes/grupa.js
@@ -11,6 +11,24 @@ router.get('/', async function(req, res, next) {
   }
 });
 
+router.get('/filter/', async function(req, res, next) {
+  try {
+    res.json(await grupa.getQuery(req.query.skola_id));
+  } catch (err) {
+    console.error(`GRESKA `, err.message);
+    next(err);
+  }
+});
+
+router.post('/', async function(req, res, next) {
+  try {
+    res.json(await grupa.dodaj(req.body));
+  } catch (err) {
+    console.error(`Greska`, err.message);
+    next(err);
+  }
+});
+
 router.delete('/:id', async function(req, res, next) {
   try {
     res.json(await grupa.drop(req.params.id));
